# voxel_engine

./: .gitignore  CMakeLists.txt
res/shaders/: model_loading.glslf  model_loading.glslv
src/: main.cpp  player.cpp  player.hpp  state.hpp  typedefs.hpp
src/block/: block.cpp  block.hpp  block_atlas.hpp
src/gfx/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
src/util/: direction.hpp  math.hpp  time.hpp
src/world/: chunk.cpp  chunk.hpp  world.cpp  world.hpp  worldgen.cpp
